UI: add method to draw menu contents

This supports expanding menu contents into an existing layout.

Needed to fix T58937.