source/blender/editors/include/UI_interface.h
@@ -1190,6 +1190,7 @@ void uiItemsFullEnumO_items(
 void uiItemL(uiLayout *layout, const char *name, int icon); /* label */
 void uiItemLDrag(uiLayout *layout, struct PointerRNA *ptr, const char *name, int icon); /* label icon for dragging */
 void uiItemM(uiLayout *layout, const char *menuname, const char *name, int icon); /* menu */
+void uiItemMContents(uiLayout *layout, const char *menuname); /* menu contents */
 void uiItemV(uiLayout *layout, const char *name, int icon, int argval); /* value */
 void uiItemS(uiLayout *layout); /* separator */
 void uiItemS_ex(uiLayout *layout, float factor);
