source/blender/makesrna/intern/rna_ui_api.c
@@ -294,6 +294,12 @@ static void rna_uiItemM(
 	uiItemM(layout, menuname, name, icon);
 }
 
+static void rna_uiItemM_contents(
+        uiLayout *layout, const char *menuname)
+{
+	uiItemMContents(layout, menuname);
+}
+
 static void rna_uiItemPopoverPanel(
         uiLayout *layout, bContext *C,
         const char *panel_type, const char *name, const char *text_ctxt,
@@ -740,6 +746,10 @@ void RNA_api_ui_layout(StructRNA *srna)
 	RNA_def_parameter_flags(parm, 0, PARM_REQUIRED);
 	parm = RNA_def_property(func, "icon_value", PROP_INT, PROP_UNSIGNED);
 	RNA_def_property_ui_text(parm, "Icon Value", "Override automatic icon of the item");
+
+	func = RNA_def_function(srna, "menu_contents", "rna_uiItemM_contents");
+	parm = RNA_def_string(func, "menu", NULL, 0, "", "Identifier of the menu");
+	RNA_def_parameter_flags(parm, 0, PARM_REQUIRED);
 
 	func = RNA_def_function(srna, "popover", "rna_uiItemPopoverPanel");
 	RNA_def_function_flag(func, FUNC_USE_CONTEXT);
